Update social media links in community section and modify trailer link in hero section

--- a/src/partials/community.html
+++ b/src/partials/community.html
@@ -25,7 +25,7 @@
           class="community-sosial-link"
           target="_blank"
           rel="noopener noreferrer"
-          href="https://www.instagram.com/pizzarushgame/#"
+          href="https://www.instagram.com/pizzarushgame"
         >
           <div class="community-sosial-current">
             <svg class="community-sosial-svg">
@@ -39,7 +39,7 @@
           class="community-sosial-link"
           target="_blank"
           rel="noopener noreferrer"
-          href="https://x.com/pizzarushgame"
+          href="https://twitter.com/pizzarushgame"
         >
           <div class="community-sosial-current">
             <svg class="community-sosial-svg">
