Add target and rel attributes to Play Now link; update SVG link symbol for improved design

--- a/src/partials/play-now.html
+++ b/src/partials/play-now.html
@@ -10,6 +10,8 @@
       </p>
       <a
         class="play-now-link"
+        target="_blank"
+        rel="noopener noreferrer"
         href="https://play.google.com/store/apps/details?id=com.yamystudio.pizzarush&hl=en&gl=us"
       >
         <svg class="play-now-svg"><use href="/sprite.svg#link"></use></svg>
